[package]
name = "every-types"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-std = { version = "14.0.0", default-features = false }
derive_more = { version = "2.0.1", default-features = false, features = [
  "display",
] }
thiserror = { version = "2.0.14", default-features = false }

codec = { version = "3.7.4", optional = true, default-features = false, features = [
  "derive",
  "max-encoded-len",
], package = "parity-scale-codec" }
frame-support = { version = "40.1.0", optional = true, default-features = false }
scale-info = { version = "2.11.6", optional = true, default-features = false, features = [
  "derive",
  "serde",
] }
serde = { version = "1.0.201", optional = true, default-features = false, features = [
  "derive",
] }
anyhow = { version = "1", optional = true, default-features = false }

[features]
default = ["std"]
scale = ["codec", "scale-info"]
serde = ["dep:serde"]
storage = ["scale", "frame-support"]
anyhow = ["dep:anyhow"]
std = [
  "sp-std/std",
  "derive_more/std",
  "thiserror/std",
  "codec?/std",
  "scale-info?/std",
  "serde?/std",
  "frame-support?/std",
  "anyhow?/std",
]
